--- a/index.html
+++ b/index.html
@@ -5,6 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="styles.css">
 
+    <!-- Fonts -->
+    <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href='https://fonts.googleapis.com/css?family=Satisfy' rel='stylesheet' type='text/css'>
+
+    <!-- Materialize CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.min.css">
+
+    <!-- jQuery (required for Materialize) -->
+    <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+
+    <!-- Materialize JS -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/js/materialize.min.js"></script>
+
     <!-- Polyfill(s) for older browsers -->
     <script src="node_modules/core-js/client/shim.min.js"></script>
 
@@ -19,6 +32,17 @@
   </head>
 
   <body>
-    <my-app>Loading...</my-app>
+      <div class="row container center-align">
+          <my-app>Loading...</my-app>
+      </div>
+      <div class="fixed-action-btn click-to-toggle" style="bottom: 45px; right: 24px;">
+          <a class="btn-floating btn-large brown">
+              <i class="large material-icons">list</i>
+          </a>
+          <ul>
+              <li><a class="btn-floating brown" href="#"><i class="material-icons">email</i></a></li>
+              <li><a class="btn-floating brown" href="#"><i class="material-icons">comment</i></a></a></li>
+          </ul>
+    </div>
   </body>
 </html>
