added some filler text and whatnot

--- a/index.html
+++ b/index.html
@@ -32,17 +32,10 @@
   </head>
 
   <body>
-      <div class="row container center-align">
-          <my-app>Loading...</my-app>
-      </div>
-      <div class="fixed-action-btn click-to-toggle" style="bottom: 45px; right: 24px;">
-          <a class="btn-floating btn-large brown">
-              <i class="large material-icons">list</i>
-          </a>
-          <ul>
-              <li><a class="btn-floating brown" href="#"><i class="material-icons">email</i></a></li>
-              <li><a class="btn-floating brown" href="#"><i class="material-icons">comment</i></a></a></li>
-          </ul>
-    </div>
+      <main>
+          <div class="progress">
+              <div class="indeterminate"></div>
+          </div>
+      </main>
   </body>
 </html>
