--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Angular 2 QuickStart</title>
+    <title>Reminisce & Delight</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="styles.css">
@@ -32,10 +32,9 @@
   </head>
 
   <body>
-      <main>
-          <div class="progress">
-              <div class="indeterminate"></div>
-          </div>
-      </main>
+      <div class="row container center-align">
+          <h1>Reminisce & Delight</h1>
+      </div>
+      <main></main>
   </body>
 </html>
