--- a/index.html
+++ b/index.html
@@ -32,9 +32,11 @@
   </head>
 
   <body>
+      <!-- Header -->
       <div class="row container center-align">
           <h1>Reminisce & Delight</h1>
       </div>
-      <main></main>    
+      <!-- Main Section -->
+      <main></main>
   </body>
 </html>
