added logo and link to ebay store

--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
   <body class="lazy" data-original="images/bg-body.jpg">
       <!-- Header -->
       <div class="row container center-align">
-          <h1 class="brown-text cursive">Reminisce & Delight</h1>
+          <!-- <h1 class="brown-text cursive">Reminisce & Delight</h1> -->
+          <img id="logo_image" src="images/logo_original.png" />
       </div>
       <!-- Main Section -->
       <main></main>
